# explore_sqlalchemy_alembic_fastapi

./: .env  README.md  alembic.ini  main.py  pyproject.toml
app/: database.py
app/migrations/: env.py
app/migrations/versions/: f493bc9a5297_initial_migrations.py
app/models/: __init__.py  product_model.py  user_model.py
